# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer_ci.yml
page_analyzer/: __init__.py  app.py  database.sql  db.py
page_analyzer/templates/: index.html  layout.html  url_info.html  urls.html
