[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page analyzer"
authors = ["Sergei Demchenko <hb13718@gmail.com>"]
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
MarkupSafe = "^2.1.2"
validators = "^0.20.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
